feat: add project following system
