# apps/server/src/main/java/com/skkil/sync/project/dto/data/ProjectFollowerDto.java
@@ -1,0 +1,3 @@
+package com.skkil.sync.project.dto.data;
+
+public record ProjectFollowerDto(Long relationshipId, Long userId, String handle, String name) {}
