# apps/server/src/main/java/com/skkil/sync/project/dto/response/GetProjectFollowersResponse.java
@@ -1,0 +1,8 @@
+package com.skkil.sync.project.dto.response;
+
+import com.skkil.sync.common.util.pagination.dto.response.CursorPaginationResponse;
+
+public record GetProjectFollowersResponse(CursorPaginationResponse<Follower> followers) {
+
+  public static record Follower(String userId, String handle, String name) {}
+}
